Add interactive vector font editor demo
This implements a glyph editor for built-in vector font data, parsing
glyph bytecode (move/line/curve opcodes) into editable structure with
zero heap allocations and provides:
- Interactive canvas with grid, baseline, ascent/descent, and bearing
  guidelines
- Color-coded control points (yellow=move, red=line, blue=curve
  control, green=curve endpoint) with selection highlighting
- Mouse-based point selection (left-click primary, right-click
  secondary) via Euclidean hit testing in glyph coordinate space
- Arrow-key point movement with Shift+arrow for paired control point
  manipulation in cubic bezier curves
- Circular undo stack (8 deep) with coalescing for consecutive arrow
  key moves, so a single undo restores the full movement sequence
- Clickable ASCII character grid (0x20-0x7E) and Prev/Next navigation
- Zoom slider (2x-12x) with dynamic canvas origin centering

Canvas rendering pre-computes the coordinate transform origin once per
draw function rather than per-point, and a fe_draw_point() helper
eliminates the duplicated selection-check pattern across point types.

--- a/configs/Kconfig
+++ b/configs/Kconfig
@@ -331,6 +331,15 @@ config DEMO_THEME
       Displays all theme colors with elevation levels.
       Demonstrates light/dark theme differences.
 
+config DEMO_FONT_EDITOR
+    bool "Font Editor Demo"
+    default y
+    depends on DEMO_EXAMPLE && MODULE_INPUT && FEATURE_VECTOR
+    help
+      Glyph editor for vector font data.
+      Displays and renders glyphs from glyphs-data.inc.
+      Demonstrates point editing and curve visualization.
+
 endmenu
 
 # Build Options
