Add PixelWall pixel-grid demo
This ports designs from the PixelWall project (Snake, Pong, Tetris,
Invaders, Pacman March) to libIUI using a static pixel grid with no heap
allocation for the grid itself. Each design implements a vtable of
Create/UpdateFrame/Destroy callbacks.

Design selector uses iui_segmented() rather than iui_tabs() because
the tab bar enforces IUI_TAB_MIN_WIDTH=90px per tab (5x90=450px),
which exceeds the 404px content area available at x=380 in an 800px
SDL window. The segmented button divides available width evenly with
no per-segment minimum, fitting all five labels without clipping.

--- a/configs/Kconfig
+++ b/configs/Kconfig
@@ -340,6 +340,15 @@ config DEMO_FONT_EDITOR
       Displays and renders glyphs from glyphs-data.inc.
       Demonstrates point editing and curve visualization.
 
+config DEMO_PIXELWALL
+    bool "Pixel-Grid Demo"
+    default y
+    depends on DEMO_EXAMPLE && MODULE_BASIC
+    help
+      Animated pixel-grid designs ported from PixelWall.
+      Includes Snake, Pong, Tetris, Invaders, and Pacman March.
+      Uses a segmented button to switch between designs.
+
 endmenu
 
 # Build Options
